[package]
name = "ebbinghaus_memory_service"
version = "0.1.0"
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "^2"
actix-rt = "1"
reqwest = "0.10.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "^0.2", features = ["full"] }
futures = "^0.3"
failure = "^0.1"
async-std = "^1.5"

log = "^0.4"
env_logger = "^0.7"

dotenv = "^0.15"
diesel = { version = "^1.4", features = ["postgres", "r2d2"] }
r2d2 = "^0.8"

crossbeam-channel = "0.4.2"
lettre = "0.9.2"
lettre_email = "0.9.2"

[dev-dependencies]
criterion = "0.3"
awc = { version = "1.0.1", default-features = false }

[[bench]]
name = "service"
harness = false
